--- a/package.json
+++ b/package.json
@@ -9,22 +9,43 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^2.1.1",
+    "@react-native-material/core": "^1.3.7",
+    "@react-navigation/native-stack": "^7.2.0",
+    "@supabase/supabase-js": "^2.48.1",
+    "base64-arraybuffer": "^1.0.2",
     "expo": "^52.0.16",
     "expo-constants": "~17.0.2",
+    "expo-document-picker": "~13.0.2",
+    "expo-image": "^2.0.4",
+    "expo-image-picker": "~16.0.5",
     "expo-linking": "~7.0.2",
+    "expo-notifications": "^0.29.13",
     "expo-router": "~4.0.2",
     "expo-splash-screen": "~0.29.7",
     "expo-status-bar": "~2.0.0",
+    "expo-store-review": "^8.0.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "react-native": "0.76.3",
+    "react-native": "^0.76.6",
+    "react-native-chart-kit": "^6.12.0",
+    "react-native-dotenv": "^3.4.11",
     "react-native-gesture-handler": "~2.20.2",
-    "react-native-safe-area-context": "4.12.0",
-    "react-native-screens": "~4.1.0",
-    "react-native-web": "~0.19.6"
+    "react-native-image-viewing": "^0.2.2",
+    "react-native-paper": "^5.13.1",
+    "react-native-reanimated": "~3.3.0",
+    "react-native-safe-area-context": "^4.12.0",
+    "react-native-screens": "~4.4.0",
+    "react-native-svg": "^15.11.1",
+    "react-native-url-polyfill": "^2.0.0",
+    "react-native-web": "~0.19.6",
+    "expo-linear-gradient": "~14.0.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "@types/react": "~18.3.12",
+    "babel-plugin-module-resolver": "^5.0.2",
+    "typescript": "^5.3.3"
   },
   "private": true
 }
