--- a/package.json
+++ b/package.json
@@ -15,13 +15,16 @@
     "@supabase/supabase-js": "^2.48.1",
     "base64-arraybuffer": "^1.0.2",
     "expo": "^52.0.16",
+    "expo-build-properties": "~0.13.2",
     "expo-constants": "~17.0.2",
     "expo-document-picker": "~13.0.2",
     "expo-image": "^2.0.4",
     "expo-image-picker": "~16.0.5",
+    "expo-linear-gradient": "~14.0.2",
     "expo-linking": "~7.0.2",
     "expo-notifications": "^0.29.13",
     "expo-router": "~4.0.2",
+    "expo-secure-store": "~14.0.1",
     "expo-splash-screen": "~0.29.7",
     "expo-status-bar": "~2.0.0",
     "expo-store-review": "^8.0.1",
@@ -39,9 +42,8 @@
     "react-native-svg": "^15.11.1",
     "react-native-url-polyfill": "^2.0.0",
     "react-native-web": "~0.19.6",
-    "expo-linear-gradient": "~14.0.2",
-    "expo-secure-store": "~14.0.1",
-    "expo-build-properties": "~0.13.2"
+    "zustand": "^5.0.3",
+    "expo-haptics": "~14.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
