--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "expo-store-review": "^8.0.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "react-error-boundary": "^5.0.0",
     "react-native": "0.76.7",
     "react-native-chart-kit": "^6.12.0",
     "react-native-dotenv": "^3.4.11",
